--- a/ai-backend/docker-compose.yml
+++ b/ai-backend/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # ==========================================
   # POSTGRES - Structure Database (Source of Truth)
@@ -70,13 +68,13 @@ services:
       timeout: 10s
       retries: 3
     # Uncomment if GPU available (NVIDIA GTX 1650)
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities: [gpu]
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     networks:
       - academic_network
 
