--- a/ai-backend/requirements.txt
+++ b/ai-backend/requirements.txt
@@ -41,8 +41,10 @@ uvicorn==0.40.0
 watchfiles==1.1.1
 websockets==15.0.1
 
-# Database drivers (use pre-built binary on Windows)
+# Database drivers and ORM
 asyncpg>=0.31.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
 
 # PDF Processing
 pdfplumber
@@ -56,3 +58,11 @@ ollama
 
 # Vector Database
 qdrant-client
+
+# Document Parsing (unstructured library)
+unstructured[pdf]>=0.10.0
+python-pptx>=0.6.0
+python-docx>=1.0.0
+pdfminer.six>=20221105
+pillow>=10.0.0
+python-magic-bin>=0.4.14  # For Windows file type detection
